<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>jomu</groupId>
	<artifactId>instrument</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>instrument</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <microstream.version>07.01.00-MS-GA</microstream.version>
        <compiler-plugin.version>3.8.1</compiler-plugin.version>
	    <maven.compiler.parameters>true</maven.compiler.parameters>
   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
	    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
	    <quarkus.platform.version>2.10.0.Final</quarkus.platform.version>
   		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
	</properties>
	
	<dependencyManagement>
	    <dependencies>
	      <dependency>
	        <groupId>${quarkus.platform.group-id}</groupId>
	        <artifactId>${quarkus.platform.artifact-id}</artifactId>
	        <version>${quarkus.platform.version}</version>
	        <type>pom</type>
	        <scope>import</scope>
	      </dependency>
	    </dependencies>
	 </dependencyManagement>
	
	<dependencies>
		<dependency>
	      <groupId>io.quarkus</groupId>
	      <artifactId>quarkus-arc</artifactId>
	    </dependency>
	    <dependency>
	      <groupId>io.quarkus</groupId>
	      <artifactId>quarkus-resteasy</artifactId>
	    </dependency>
	    <dependency>
		    <groupId>io.quarkus</groupId>
    		<artifactId>quarkus-spring-di</artifactId>
		</dependency>
	    <dependency>
	      <groupId>io.quarkus</groupId>
	      <artifactId>quarkus-junit5</artifactId>
	      <scope>test</scope>
	    </dependency>
	    <dependency>
	      <groupId>io.rest-assured</groupId>
	      <artifactId>rest-assured</artifactId>
	      <scope>test</scope>
	    </dependency>
   	
        <dependency>
            <groupId>one.microstream</groupId>
            <artifactId>microstream-storage-embedded</artifactId>
            <version>${microstream.version}</version>
        </dependency>
        <dependency>
            <groupId>one.microstream</groupId>
            <artifactId>microstream-storage-embedded-configuration</artifactId>
            <version>${microstream.version}</version>
        </dependency>
        
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>     
        <dependency>
		    <groupId>org.openjdk.jmc</groupId>
		    <artifactId>common</artifactId>
		    <version>8.3.0</version>
		</dependency>   	
		
		<dependency>
		    <groupId>io.quarkus</groupId>
		    <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
    	    <version>2.15.0.Final</version>
		</dependency>
		
		<dependency>
			<groupId>net.beadsproject</groupId>
			<artifactId>beads</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
		    <groupId>com.formdev</groupId>
		    <artifactId>flatlaf</artifactId>
		    <version>2.0.1</version>
		</dependency>
		<dependency>
  		<groupId>com.formdev</groupId>
  			<artifactId>flatlaf-intellij-themes</artifactId>
		  <version>2.6</version>
		</dependency>
		<dependency>
			<groupId>jomuddlo</groupId>
			<artifactId>tarsos</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/library/TarsosDSP-2.4.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>jomuddlo</groupId>
			<artifactId>mp3spi</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/library/mp3spi1.9.4.jar</systemPath>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
		        <groupId>${quarkus.platform.group-id}</groupId>
		        <artifactId>quarkus-maven-plugin</artifactId>
		        <version>${quarkus.platform.version}</version>
		        <extensions>true</extensions>
		        <executions>
		          <execution>
		            <goals>
		              <goal>build</goal>
		              <goal>generate-code</goal>
		              <goal>generate-code-tests</goal>
		            </goals>
		          </execution>
		        </executions>
		      </plugin>
		      <plugin>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>${compiler-plugin.version}</version>
		        <configuration>
		          <parameters>${maven.compiler.parameters}</parameters>
		          <source>19</source>
				  <target>19</target>
			      <compilerArgs>--enable-preview</compilerArgs>
			    </configuration>
		      </plugin>
		      <plugin>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>${surefire-plugin.version}</version>
		        <configuration>
		          <systemPropertyVariables>
		            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
		            <maven.home>${maven.home}</maven.home>
		          </systemPropertyVariables>
		        </configuration>
		      </plugin>
		</plugins>
	</build>
	 <profiles>
	    <profile>
	      <id>native</id>
	      <activation>
	        <property>
	          <name>native</name>
	        </property>
	      </activation>
	      <build>
	        <plugins>
	          <plugin>
	            <artifactId>maven-failsafe-plugin</artifactId>
	            <version>${surefire-plugin.version}</version>
	            <executions>
	              <execution>
	                <goals>
	                  <goal>integration-test</goal>
	                  <goal>verify</goal>
	                </goals>
	                <configuration>
	                  <systemPropertyVariables>
	                    <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
	                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
	                    <maven.home>${maven.home}</maven.home>
	                  </systemPropertyVariables>
	                </configuration>
	              </execution>
	            </executions>
	          </plugin>
	        </plugins>
	      </build>
	      <properties>
	        <quarkus.package.type>native</quarkus.package.type>
	      </properties>
	    </profile>
	  </profiles>
	<repositories>
		<repository>
			<id>clojars_repo</id>
			<url>https://clojars.org/repo/</url>
		</repository>
        <repository>
            <id>microstream-maven-releases</id>
            <url>https://repo.microstream.one/repository/maven-public/</url>
        </repository>
	</repositories>
</project>
